--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,17 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #0a337a;
+  --secondary: #ff5151;
+  --card: #161e54;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
